<?xml version="1.0"?>
<package format="2">
  <name>web_video_server</name>
  <version>1.0.0</version>
  <description>HTTP Streaming of ROS Image Topics in Multiple Formats</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/web_video_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/web_video_server/issues</url>
  <url type="repository">https://github.com/RobotWebTools/web_video_server</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>async_web_server_cpp</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>async_web_server_cpp</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
